mutants.out/log/crates__ax-cli__src__main.rs_line_114_col_5_001.log

*** crates/ax-cli/src/main.rs:114:5: replace load_baseline -> Result<Option<RecordSet>, AxError> with Ok(Some(Default::default()))

*** mutation diff:
--- crates/ax-cli/src/main.rs
+++ replace load_baseline -> Result<Option<RecordSet>, AxError> with Ok(Some(Default::default()))
@@ -106,23 +106,17 @@
                 .map_err(|e| AxError::Io(format!("stdin: {e}")))?;
             Ok(("-".to_string(), buf))
         }
     }
 }
 
 /// Normalizes the optional baseline corpus from its path.
 fn load_baseline(path: &Option<String>) -> Result<Option<RecordSet>, AxError> {
-    match path {
-        Some(p) => {
-            let bytes = std::fs::read(p).map_err(|e| AxError::Io(format!("{p}: {e}")))?;
-            Ok(Some(ax_normalize::normalize(p, &bytes)?))
-        }
-        None => Ok(None),
-    }
+    Ok(Some(Default::default())) /* ~ changed by cargo-mutants ~ */
 }
 
 fn cmd_scan(rest: &[String]) -> Result<ExitCode, AxError> {
     let (baseline_path, positional) = split_baseline(rest)?;
     let (source, bytes) = read_input(positional.first())?;
     let rs = ax_normalize::normalize(&source, &bytes)?;
     let baseline = load_baseline(&baseline_path)?;
 


*** /home/ops/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --package=ax-cli@0.1.0
       Fresh autocfg v1.5.1
       Fresh unicode-ident v1.0.24
       Fresh cfg-if v1.0.4
       Fresh memchr v2.8.1
       Fresh bytemuck v1.25.0
       Fresh itoa v1.0.18
       Fresh rawpointer v0.2.1
       Fresh typenum v1.20.1
       Fresh ryu v1.0.23
       Fresh libm v0.2.16
       Fresh proc-macro2 v1.0.106
       Fresh libc v0.2.186
       Fresh safe_arch v0.7.4
       Fresh csv-core v0.1.13
       Fresh num-traits v0.2.19
       Fresh quote v1.0.45
       Fresh getrandom v0.2.17
       Fresh zerocopy v0.8.50
       Fresh serde_core v1.0.228
       Fresh paste v1.0.15
       Fresh wide v0.7.33
       Fresh zmij v1.0.21
       Fresh matrixmultiply v0.3.10
       Fresh syn v2.0.117
       Fresh rand_core v0.6.4
       Fresh ppv-lite86 v0.2.21
       Fresh num-integer v0.1.46
       Fresh num-complex v0.4.6
       Fresh approx v0.5.1
       Fresh serde_json v1.0.150
       Fresh csv v1.4.0
       Fresh rand_chacha v0.3.1
       Fresh thiserror-impl v2.0.18
       Fresh serde_derive v1.0.228
       Fresh simba v0.9.1
       Fresh num-rational v0.4.2
       Fresh rand v0.8.6
       Fresh serde v1.0.228
       Fresh thiserror v2.0.18
       Fresh rand_distr v0.4.3
       Fresh ax-core v0.1.0 (/tmp/claude-1000/cargo-mutants-anomalyx-L5lEO1.tmp/crates/ax-core)
       Fresh nalgebra v0.33.3
       Fresh ax-normalize v0.1.0 (/tmp/claude-1000/cargo-mutants-anomalyx-L5lEO1.tmp/crates/ax-normalize)
       Fresh statrs v0.18.0
       Fresh ax-detect v0.1.0 (/tmp/claude-1000/cargo-mutants-anomalyx-L5lEO1.tmp/crates/ax-detect)
       Dirty ax-cli v0.1.0 (/tmp/claude-1000/cargo-mutants-anomalyx-L5lEO1.tmp/crates/ax-cli): the file `crates/ax-cli/src/main.rs` has changed (1780158689.671176605s, 267188063ns after last build at 1780158689.403988542s)
   Compiling ax-cli v0.1.0 (/tmp/claude-1000/cargo-mutants-anomalyx-L5lEO1.tmp/crates/ax-cli)
     Running `/home/ops/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/rustc --crate-name anomalyx --edition=2021 crates/ax-cli/src/main.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=d3927f35017454c5 -C extra-filename=-8f0171a50ea70bc5 --out-dir /tmp/claude-1000/cargo-mutants-anomalyx-L5lEO1.tmp/target/debug/deps -C incremental=/tmp/claude-1000/cargo-mutants-anomalyx-L5lEO1.tmp/target/debug/incremental -L dependency=/tmp/claude-1000/cargo-mutants-anomalyx-L5lEO1.tmp/target/debug/deps --extern ax_core=/tmp/claude-1000/cargo-mutants-anomalyx-L5lEO1.tmp/target/debug/deps/libax_core-1d792e6226813f58.rlib --extern ax_detect=/tmp/claude-1000/cargo-mutants-anomalyx-L5lEO1.tmp/target/debug/deps/libax_detect-399716f179ab183f.rlib --extern ax_normalize=/tmp/claude-1000/cargo-mutants-anomalyx-L5lEO1.tmp/target/debug/deps/libax_normalize-ad1cbafb4bea42b0.rlib --extern serde=/tmp/claude-1000/cargo-mutants-anomalyx-L5lEO1.tmp/target/debug/deps/libserde-87f5ec849e622ab0.rlib --extern serde_json=/tmp/claude-1000/cargo-mutants-anomalyx-L5lEO1.tmp/target/debug/deps/libserde_json-a28b92d783b9b64b.rlib`
     Running `/home/ops/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/rustc --crate-name anomalyx --edition=2021 crates/ax-cli/src/main.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type bin --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=01d915f6d0412c5a -C extra-filename=-5914b7fee172b307 --out-dir /tmp/claude-1000/cargo-mutants-anomalyx-L5lEO1.tmp/target/debug/deps -C incremental=/tmp/claude-1000/cargo-mutants-anomalyx-L5lEO1.tmp/target/debug/incremental -L dependency=/tmp/claude-1000/cargo-mutants-anomalyx-L5lEO1.tmp/target/debug/deps --extern ax_core=/tmp/claude-1000/cargo-mutants-anomalyx-L5lEO1.tmp/target/debug/deps/libax_core-1d792e6226813f58.rlib --extern ax_detect=/tmp/claude-1000/cargo-mutants-anomalyx-L5lEO1.tmp/target/debug/deps/libax_detect-399716f179ab183f.rlib --extern ax_normalize=/tmp/claude-1000/cargo-mutants-anomalyx-L5lEO1.tmp/target/debug/deps/libax_normalize-ad1cbafb4bea42b0.rlib --extern serde=/tmp/claude-1000/cargo-mutants-anomalyx-L5lEO1.tmp/target/debug/deps/libserde-87f5ec849e622ab0.rlib --extern serde_json=/tmp/claude-1000/cargo-mutants-anomalyx-L5lEO1.tmp/target/debug/deps/libserde_json-a28b92d783b9b64b.rlib`
error[E0277]: the trait bound `RecordSet: Default` is not satisfied
   --> crates/ax-cli/src/main.rs:114:13
    |
114 |     Ok(Some(Default::default())) /* ~ changed by cargo-mutants ~ */
    |             ^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `RecordSet`

error[E0277]: the trait bound `ax_core::RecordSet: Default` is not satisfied
   --> crates/ax-cli/src/main.rs:114:13
    |
114 |     Ok(Some(Default::default())) /* ~ changed by cargo-mutants ~ */
    |             ^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `ax_core::RecordSet`

For more information about this error, try `rustc --explain E0277`.
error: could not compile `ax-cli` (bin "anomalyx") due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/ops/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/rustc --crate-name anomalyx --edition=2021 crates/ax-cli/src/main.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type bin --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=01d915f6d0412c5a -C extra-filename=-5914b7fee172b307 --out-dir /tmp/claude-1000/cargo-mutants-anomalyx-L5lEO1.tmp/target/debug/deps -C incremental=/tmp/claude-1000/cargo-mutants-anomalyx-L5lEO1.tmp/target/debug/incremental -L dependency=/tmp/claude-1000/cargo-mutants-anomalyx-L5lEO1.tmp/target/debug/deps --extern ax_core=/tmp/claude-1000/cargo-mutants-anomalyx-L5lEO1.tmp/target/debug/deps/libax_core-1d792e6226813f58.rlib --extern ax_detect=/tmp/claude-1000/cargo-mutants-anomalyx-L5lEO1.tmp/target/debug/deps/libax_detect-399716f179ab183f.rlib --extern ax_normalize=/tmp/claude-1000/cargo-mutants-anomalyx-L5lEO1.tmp/target/debug/deps/libax_normalize-ad1cbafb4bea42b0.rlib --extern serde=/tmp/claude-1000/cargo-mutants-anomalyx-L5lEO1.tmp/target/debug/deps/libserde-87f5ec849e622ab0.rlib --extern serde_json=/tmp/claude-1000/cargo-mutants-anomalyx-L5lEO1.tmp/target/debug/deps/libserde_json-a28b92d783b9b64b.rlib` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error: could not compile `ax-cli` (bin "anomalyx" test) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/ops/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/rustc --crate-name anomalyx --edition=2021 crates/ax-cli/src/main.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=d3927f35017454c5 -C extra-filename=-8f0171a50ea70bc5 --out-dir /tmp/claude-1000/cargo-mutants-anomalyx-L5lEO1.tmp/target/debug/deps -C incremental=/tmp/claude-1000/cargo-mutants-anomalyx-L5lEO1.tmp/target/debug/incremental -L dependency=/tmp/claude-1000/cargo-mutants-anomalyx-L5lEO1.tmp/target/debug/deps --extern ax_core=/tmp/claude-1000/cargo-mutants-anomalyx-L5lEO1.tmp/target/debug/deps/libax_core-1d792e6226813f58.rlib --extern ax_detect=/tmp/claude-1000/cargo-mutants-anomalyx-L5lEO1.tmp/target/debug/deps/libax_detect-399716f179ab183f.rlib --extern ax_normalize=/tmp/claude-1000/cargo-mutants-anomalyx-L5lEO1.tmp/target/debug/deps/libax_normalize-ad1cbafb4bea42b0.rlib --extern serde=/tmp/claude-1000/cargo-mutants-anomalyx-L5lEO1.tmp/target/debug/deps/libserde-87f5ec849e622ab0.rlib --extern serde_json=/tmp/claude-1000/cargo-mutants-anomalyx-L5lEO1.tmp/target/debug/deps/libserde_json-a28b92d783b9b64b.rlib` (exit status: 1)

*** result: Failure(101)
